Commented out to fetch OSM data

--- a/src/2_vector.ipynb
+++ b/src/2_vector.ipynb
@@ -525,7 +525,7 @@
     "# NOTE: loop Fetches OSM data for all years. repeat queries may cause IP blocking by the server\n",
     "for year in osm.years:\n",
     "    queries = osm.overpass_query_builder(year=year, bbox=osm.bbox)\n",
-    "    #osm.fetch_osm_data(queries=queries, year=year)\n",
+    "    osm.fetch_osm_data(queries=queries, year=year)\n",
     "    osm.convert_to_geojson(queries=queries, year=year)\n",
     "    osm.fix_invalid_geometries(queries=queries,year=year,overwrite_original=True)\n",
     "\n",
